# deep-research-agent

./: .env.example  .gitignore  Dockerfile  Dockerfile.frontend  LICENSE  README-zh.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_server.bat
agents/deep-research/: .env.example  Dockerfile  Dockerfile.frontend  README-zh.md  README.md  requirements.txt  run_server.bat
agents/deep-research/html/: index.html  main.js  styles.css
agents/deep-research/test/: check_config.py  test_api.py  test_api_direct.py  test_config_loading.py  test_feedback_modification.py  test_graph_mock.py  test_import.py  test_langfuse_import.py  test_recursive_mvp.py  test_state.py  verify_refactor.py  verify_setup.py
deploy/: docker-compose.yml
docs/: api_reference.md  architecture.md  design_specification.md  setup_guide.md
docs/architecture/: 001-framework-vision.md  002-roadmap-and-implementation.md
dummy_package/: __init__.py
html/: main.js  styles.css
libs/agent-core/: pyproject.toml
libs/agent-core/src/agent_core/: __init__.py
libs/agent-core/src/agent_core/core/: __init__.py  context_manager.py  hitl.py  interfaces.py  nodes.py  orchestrator.py  processor.py  state.py
libs/agent-core/src/agent_core/middleware/: base.py  implementations.py
libs/agent-core/src/agent_core/utils/: config.py  models.py
src/deep_research_agent/: __init__.py  app.py  graph.py
src/deep_research_agent/core/: hitl.py  state.py
src/deep_research_agent/middleware/: base.py  implementations.py
test/: conftest.py  test_graph_mock.py  test_tracing_middleware.py
(+19 files in other folders)
