[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research-agent"
version = "0.1.0"
description = "A stateful AI research agent with human-in-the-loop"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/changflow/deep-research-agent"
Repository = "https://github.com/changflow/deep-research-agent"

[tool.setuptools.packages.find]
where = ["src", "."]  # 同时扫描 src 和 根目录
include = ["deep_research_agent*"]

[project.optional-dependencies]
all = [
    "pytest",
    "black",
    "flake8",
    "mypy",
    "langfuse",
    "tavily-python",
    "langchain",
    "langchain-openai",
    "python-dotenv"
]